force-app/main/default/objects/GTM_Analytics_Settings__c/GTM_Analytics_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Admin-configurable Analytics settings (issue #147), starting with the weekly Analytics notification email (GtmAnalyticsDigestJob, issue #140). Hierarchy, not Custom Metadata, so GtmAnalyticsSettingsController can upsert it with plain DML from the Settings tab's Save action.</description>
    <label>GTM Analytics Settings</label>
</CustomObject>