force-app/main/default/objects/GTM_Analytics_Settings__c/fields/Digest_Day_Of_Week__c.field-meta.xml
<CustomField>
    <fullName>Digest_Day_Of_Week__c</fullName>
    <defaultValue>"MON"</defaultValue>
    <description>Day the weekly Analytics email goes out, as a CRON day-of-week abbreviation (MON/TUE/WED/THU/FRI/SAT/SUN). A Custom Setting field can't be a Picklist -- GtmAnalyticsSettingsController.saveSettings validates this against that fixed set before it's ever used to build a CRON expression.</description>
    <label>Digest Day Of Week</label>
    <length>3</length>
    <type>Text</type>
</CustomField>