force-app/main/default/objects/GTM_Analytics_Settings__c/fields/Digest_Hour__c.field-meta.xml
<CustomField>
    <fullName>Digest_Hour__c</fullName>
    <defaultValue>8</defaultValue>
    <description>Hour of day (0-23, org time zone) the weekly Analytics email goes out. Validated against 0-23 in GtmAnalyticsSettingsController.saveSettings before use in a CRON expression.</description>
    <label>Digest Hour</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>