force-app/main/default/objects/GTM_Analytics_Settings__c/fields/Notify_Weekly_Digest__c.field-meta.xml
<CustomField>
    <fullName>Notify_Weekly_Digest__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Analytics notification: when true, every active rep who owns at least one engagement link gets a weekly email summary of their own Analytics numbers (GtmAnalyticsDigestJob). Toggling this from the Settings tab schedules or aborts that job -- see GtmAnalyticsSettingsController.saveSettings.</description>
    <label>Send weekly Analytics email</label>
    <type>Checkbox</type>
</CustomField>